# drupal_ls

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  opts.rs  utils.rs
src/document_store/: document.rs  mod.rs
src/documentation/: mod.rs
src/parser/: mod.rs  php.rs  tokens.rs  yaml.rs
src/server/: handle_notification.rs  handle_request.rs  mod.rs
src/server/handlers/: mod.rs
src/server/handlers/code_action/: mod.rs
src/server/handlers/completion/: mod.rs
src/server/handlers/definition/: mod.rs
src/server/handlers/hover/: mod.rs
vscode-extension/: .vscodeignore  LICENSE  esbuild.js  package-lock.json  package.json
vscode-extension/src/: extension.ts
